# ADSORFIT-model-fitting

./: .gitignore  ADSCON.py  ADSORFIT.py  README.md  configurations.py  pyproject.toml  requirements.txt  setup.py
ADSORFIT/: ADSORFIT.bat  ADSORFIT.py  AdsorptionFit.py  start_on_windows.bat
ADSORFIT/app/: app.py  configuration.py  configurations.py  constants.py  logger.py  main.py  requirements.txt  variables.py
ADSORFIT/app/api/: __init__.py
ADSORFIT/app/assets/: window_layout.ui
ADSORFIT/app/client/: controllers.py  dialogs.py  events.py  interface.py  layouts.py  main.py  window.py  (+1 more)
ADSORFIT/commons/: configurations.py  constants.py  logger.py  main.py  pathfinder.py  variables.py
ADSORFIT/config/: pathfinder.py
ADSORFIT/data/: adsorption_data.csv
ADSORFIT/fitting/: adsorption_models_fitting UI.py  adsorption_models_fitting.py
ADSORFIT/resources/: adsorption_data.csv
ADSORFIT/services/: adsorption_model_fitting.py
ADSORFIT/settings/: app_configurations.json  configurations.json  launcher_configurations.ini
ADSORFIT/setup/: .env  configurations.json
ADSORFIT/src/: app.py
ADSORFIT/utils/: datasets.py  models.py
components/: data_assets.py  global_paths.py
data/: adsorption_fitting.csv
modules/: global_variables.py
modules/components/: data_assets.py  data_classes.py
scripts/: environment_setup.bat  package_setup.bat  remove_logs.bat
setup/: ADSORFIT_installer.bat  create_environment.bat  install_on_windows.bat
tests/client/: test_controllers.py
tests/utils/: test_serializer.py
utils/: data_assets.py  datasets.py  models.py
(+65 files in other folders)
