[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ADSORFIT"
version = "2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.117.1",
    "nicegui==2.0.0",
    "scikit-learn==1.6.1",    
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "numpy==2.3.2",
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "SQLAlchemy==2.0.41",
    "python-dotenv==1.1.0",
    "httpx==0.27.2",
    "uvicorn[standard]==0.32.1"
]

[tool.hatch.build.targets.wheel]
packages = ["adsorfit"] 

